# centralize-backend

./: .gitignore  README.md  docker-compose.yml  example.env  pyproject.toml
src/: check_django_and_run_celery.sh  manage.py
src/authentication/: models.py  serializers.py  urls.py
src/authentication/migrations/: 0001_initial.py  0002_alter_profile_options_profile_role_and_more.py
src/authentication/tests/: test_profiles.py
src/catalog/: models.py  serializers.py  urls.py
src/catalog/migrations/: 0001_initial.py
src/catalog/tests/: helpers.py  test_categories.py  test_products.py
src/centralize/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/centralize/settings/: __init__.py
src/centralize/settings/components/: cache.py  common.py  libs.py
